Resolved additional minor spacing issues

--- a/mapMenu.css
+++ b/mapMenu.css
@@ -9,7 +9,7 @@ html, body {
 	color: #444;
 	}
 	
-    #map { width: 600px; height:650px; background: black; }
+    #map { width: 600px; height:670px; background: black; }
            
 body a, leaflet-control-attribution, leaflet-control {color: #385074}               
 
@@ -205,10 +205,10 @@ font-family: "Helvetica",Arial;
 #resultTable {
 	width: 600px; 
 	background-color: none;
-	
+	line-height: .9em;
 	padding: 0 0 5px 0;
 	position: relative;
-	top: -20px;
+	top: -25px;
 	font-size: 0.9em;
 }
 
@@ -219,7 +219,7 @@ font-family: "Helvetica",Arial;
 	height:55px; 
 	width: 580px;
 	position: relative;
-	top: 30px;
+	top: 25px;
 	margin-left: 5px;
 	
 	
@@ -229,22 +229,11 @@ font-family: "Helvetica",Arial;
 			width: 590px;
 			height: 240px;
 			background-color: rgba(255,255,255,0.75);
-						/*
-background: -webkit-linear-gradient(#F9F9F9, #E1E1E1); 
-			background: -moz-linear-gradient(#F9F9F9, #E1E1E1);
-			background: -o-linear-gradient(#F9F9F9, #E1E1E1);
-            background: linear-gradient(#F9F9F9,#E1E1E1); 
-*/
 			z-index: 3; 
 			font-family: Arial, Helvetica, sans-serif;
 			padding: 5px 0 0 10px;
-			/*
--moz-box-shadow:    inset 0 0 5px #000000;
-			-webkit-box-shadow: inset 0 0 5px #000000;
-			box-shadow:         inset 0 0 5px #000000;
-*/
-	position: relative;
-	top: -220px;
+			position: relative;
+			top: -230px;
 }
 	
 .ui-widget {
